--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -20,6 +20,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 12px;
+  color: #333;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -44,4 +45,7 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+a{
+  text-decoration: none;
 }
