--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -49,3 +49,9 @@ table {
 a{
   text-decoration: none;
 }
+[class^="icon-"]{
+  color: #fff;
+}
+[class^="icon-"]:before{
+  vertical-align: middle;
+}
